Implement database schema updates and enhance destination detail page

--- a/src/views/components/navbar.html
+++ b/src/views/components/navbar.html
@@ -4,7 +4,7 @@
         <h1 class="text-2xl font-bold">Explore Nusantara</h1>
         <nav class="hidden md:flex space-x-6">
         <a href="/" class="hover:underline">Beranda</a>
-        <a href="/destinastion" class="hover:underline">Destinasi</a>
+        <a href="/destination" class="hover:underline">Destinasi</a>
         <a href="/contact" class="hover:underline">Kontak</a>
         </nav>
     </div>
