--- a/src/views/components/navbar.html
+++ b/src/views/components/navbar.html
@@ -1,11 +1,13 @@
 <!-- Navbar -->
 <header class="bg-primary text-white shadow sticky top-0 z-50">
     <div class="max-w-6xl mx-auto px-4 flex justify-between items-center py-4">
-        <h1 class="text-2xl font-bold">Explore Nusantara</h1>
-        <nav class="hidden md:flex space-x-6">
-        <a href="/" class="hover:underline">Beranda</a>
-        <a href="/destination" class="hover:underline">Destinasi</a>
-        <a href="/contact" class="hover:underline">Kontak</a>
+        <h1 class="text-2xl font-bold">Nusantara Travel</h1>
+        <nav class="hidden md:flex space-x-6 justify-center items-center">
+            <a href="/" class="hover:underline">Beranda</a>
+            <a href="/destination" class="hover:underline">Destinasi</a>
+            <a href="/contact" class="hover:underline">Kontak</a>
+            <a href="/about" class="hover:underline">Tentang</a>
+            <a href="/login" class="hover:underline bg-red-400 p-2 rounded">Masuk</a>
         </nav>
     </div>
 </header>
