--- a/src/views/components/header.html
+++ b/src/views/components/header.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Explore Nusantara - Beranda</title>
+  <title>Nusantara Travel - Beranda</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
